--- a/P2arlooo/P2arlooo/Debug/Makefile
+++ b/P2arlooo/P2arlooo/Debug/Makefile
@@ -103,6 +103,7 @@ SUBDIRS :=  \
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
 ../src/Delays/delay.c \
+../src/Tasks/task_BLINKA.c \
 ../src/Tasks/task_LED.c \
 ../src/Tasks/task_VinkelGivare.c \
 ../src/ASF/common/services/delay/sam/cycle_counter.c \
@@ -142,6 +143,7 @@ ASM_SRCS +=
 
 OBJS +=  \
 src/Delays/delay.o \
+src/Tasks/task_BLINKA.o \
 src/Tasks/task_LED.o \
 src/Tasks/task_VinkelGivare.o \
 src/ASF/common/services/delay/sam/cycle_counter.o \
@@ -174,6 +176,7 @@ src/main.o
 
 OBJS_AS_ARGS +=  \
 src/Delays/delay.o \
+src/Tasks/task_BLINKA.o \
 src/Tasks/task_LED.o \
 src/Tasks/task_VinkelGivare.o \
 src/ASF/common/services/delay/sam/cycle_counter.o \
@@ -206,6 +209,7 @@ src/main.o
 
 C_DEPS +=  \
 src/Delays/delay.d \
+src/Tasks/task_BLINKA.d \
 src/Tasks/task_LED.d \
 src/Tasks/task_VinkelGivare.d \
 src/ASF/common/services/delay/sam/cycle_counter.d \
@@ -238,6 +242,7 @@ src/main.d
 
 C_DEPS_AS_ARGS +=  \
 src/Delays/delay.d \
+src/Tasks/task_BLINKA.d \
 src/Tasks/task_LED.d \
 src/Tasks/task_VinkelGivare.d \
 src/ASF/common/services/delay/sam/cycle_counter.d \
@@ -283,6 +288,8 @@ LINKER_SCRIPT_DEP+=  \
 
 
 # AVR32/GNU C Compiler
+
+
 
 
 
