Lade till svängningen i "Styrning"

--- a/P2_styrning/P2_styrning/Debug/Makefile
+++ b/P2_styrning/P2_styrning/Debug/Makefile
@@ -94,6 +94,7 @@ SUBDIRS :=  \
 C_SRCS +=  \
 ../src/ASF/common/utils/stdio/read.c \
 ../src/ASF/sam/drivers/tc/tc.c \
+../src/Rotate.c \
 ../src/Motorfunctions.c \
 ../src/PID_Controller.c \
 ../src/ASF/sam/drivers/usart/usart.c \
@@ -126,6 +127,7 @@ ASM_SRCS +=
 OBJS +=  \
 src/ASF/common/utils/stdio/read.o \
 src/ASF/sam/drivers/tc/tc.o \
+src/Rotate.o \
 src/Motorfunctions.o \
 src/PID_Controller.o \
 src/ASF/sam/drivers/usart/usart.o \
@@ -151,6 +153,7 @@ src/main.o
 OBJS_AS_ARGS +=  \
 src/ASF/common/utils/stdio/read.o \
 src/ASF/sam/drivers/tc/tc.o \
+src/Rotate.o \
 src/Motorfunctions.o \
 src/PID_Controller.o \
 src/ASF/sam/drivers/usart/usart.o \
@@ -176,6 +179,7 @@ src/main.o
 C_DEPS +=  \
 src/ASF/common/utils/stdio/read.d \
 src/ASF/sam/drivers/tc/tc.d \
+src/Rotate.d \
 src/Motorfunctions.d \
 src/PID_Controller.d \
 src/ASF/sam/drivers/usart/usart.d \
@@ -201,6 +205,7 @@ src/main.d
 C_DEPS_AS_ARGS +=  \
 src/ASF/common/utils/stdio/read.d \
 src/ASF/sam/drivers/tc/tc.d \
+src/Rotate.d \
 src/Motorfunctions.d \
 src/PID_Controller.d \
 src/ASF/sam/drivers/usart/usart.d \
@@ -238,6 +243,8 @@ LINKER_SCRIPT_DEP+=  \
 
 
 # AVR32/GNU C Compiler
+
+
 
 
 
